Trying to Fix X Overflow

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,6 @@
 
 body, html {
 	overflow: hidden;
-	max-width: 100%;
 	overflow-x: hidden;
 }
 
